feat: add delivery function in cargo
